<resources>
    <string name="app_name">My App portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="xyz_reader">xyz Reader</string>
    <string name="capstone_my_own_app">capstone: my own app</string>
    <string name="build_it_bigger">build it bigger</string>
    <string name="library_app">library app</string>
    <string name="scores_app">scores app</string>
    <string name="list_title">My Nanodegree Apps!</string>
</resources>
